working on login-router

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mmthatch12/webauth-i-challenge#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
