--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/mmthatch12/webauth-i-challenge#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "connect-session-knex": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0"
   },
